@@ -244,8 +244,21 @@ namespace tr1
     struct rank<_Tp[]>
     : public integral_constant<std::size_t, 1 + rank<_Tp>::value> { };
    
-  template<typename _Tp, unsigned _Uint = 0>
-    struct extent;
+  template<typename, unsigned = 0>
+    struct extent
+    : integral_constant<std::size_t, 0> { };
+  
+  template<typename _Tp, unsigned _Uint, std::size_t _Size>
+    struct extent<_Tp[_Size], _Uint>
+    : integral_constant<std::size_t,
+			_Uint == 0 ? _Size : extent<_Tp, _Uint - 1>::value>
+    { };
+
+  template<typename _Tp, unsigned _Uint>
+    struct extent<_Tp[], _Uint>
+    : integral_constant<std::size_t,
+			_Uint == 0 ? 0 : extent<_Tp, _Uint - 1>::value>
+    { };
   
   /// @brief  relationships between types [4.6].
   template<typename, typename>
